--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/chr15m/DoodleCSS/issues/"
   },
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "browser-sync": "^2.29.1"
   },
   "keywords": [
     "css",
@@ -21,5 +21,8 @@
     "html",
     "stylesheet",
     "hand-drawn"
-  ]
+  ],
+  "scripts": {
+    "watch": "browser-sync start --server . --files . --no-open --port 8000"
+  }
 }
